# tgbot-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  build.py  conanfile.py  conanfile.txt
.travis/: install.sh
include/tgbot/net/: HttpClient.h
src/net/: HttpClient.cpp
test/: CMakeLists.txt
test_package/: CMakeLists.txt
